# zelda

./: .gitignore  ASSET_DOCUMENTATION_PLAN.md  COMPILATION_ANALYSIS.md  DATASET_SUMMARY.md  DIVERSITY_IMPROVEMENTS.md  Makefile  OOT_BUILD_GUIDE.md  OOT_NATIVE_CONVERSION_PLAN.md  PHASE_1_1_CODEBASE_ASSESSMENT.md  PHASE_1_2_COMPLETION_SUMMARY.md  PHASE_1_2_DEPENDENCY_MAPPING.md  PHASE_1_3_TECHNICAL_ARCHITECTURE_DESIGN.md  QUICKSTART.md  README.md  README_GENERATOR.md  SYSTEM_SUMMARY.md  UNSLOTH_INTEGRATION_GUIDE.md  VALIDATION_ENHANCEMENTS.md  asset_documentation.py  asset_documentation_requirements.txt  asset_graphrag_connector.py  asset_graphrag_integration.py  complete_context_generator.py  config.json  convert_to_unsloth.py  convert_to_unsloth_v2.py  demonstrate_graphrag_capabilities.py  dynamic_source_integration_plan.md  enhanced_asset_analysis.py  enhanced_authentic_generator.py  example.py  example_01_code_explanation.txt  example_04_architecture_question.txt  example_05_code_modification.txt  example_08_debugging_help.txt  example_09_architecture_question.txt  final_integration_demo.py  final_summary.py  fix_hd_slice_inc_c.py  fix_hd_slice_inc_c_bytes.py  (+31 more)
.cursor/rules/: build-rom.mdc
asset_documentation/: asset_inventory.json  asset_inventory_with_vlm.json  asset_inventory_with_vlm_enhanced.json  asset_report.md  asset_stats.json  enhanced_asset_analysis.md  vlm_analyses.json  vlm_analyses_enhanced.json  vlm_report.md  vlm_report_enhanced.md
data/: debug_fixed.jsonl  debug_fixed_diversity_analysis.json  demo_metadata.json  demo_training_data.jsonl  dynamic_authentic_training_100.jsonl  dynamic_authentic_training_100_analysis.json  enhanced_training_examples_20250705_130645.json  example_02_feature_implementation.txt  example_03_debugging_help.txt  example_06_code_explanation.txt  example_07_feature_implementation.txt  example_10_code_modification.txt  final_working_system.jsonl  final_working_system_diversity_analysis.json  improved_scenarios.json  oot_authentic_training_100.jsonl  oot_authentic_training_100_analysis.json  oot_training_5_examples.jsonl  oot_training_5_examples_diversity_analysis.json  test_fixed_validation_diversity_analysis.json  test_small_generation.jsonl  test_small_generation_diversity_analysis.json  test_with_restored_validation.jsonl  test_with_restored_validation_diversity_analysis.json
docs/: hd_textures.md
documentation/: DIVERSITY_IMPROVEMENTS.md  SYSTEM_SUMMARY.md
examples/: README.md
generated_parsed_code/: snippet_0001.c  snippet_0002.c  snippet_0003.c  snippet_0004.c  snippet_0005.c
helpers/: complete_context_generator.py  generate_oot_symbols.py  oot_functions_detailed.txt  validate_and_enhance_scenarios.py
mode_examples/: 001_handcrafted_examples.jsonl  002_handcrafted_examples.jsonl  002_handcrafted_examples_slomo_enemies.jsonl  003_handcrafted_examples_fast_link.jsonl  large_batch_100.jsonl  large_batch_100_diversity_analysis.json  large_generation_20.jsonl  large_generation_20_conformed.jsonl  large_generation_20_diversity_analysis.json  output.jsonl  output_diversity_analysis.json  test_compilation_5.jsonl  test_compilation_5_diversity_analysis.json  test_compilation_generation.jsonl  test_compilation_generation_diversity_analysis.json  test_compilation_integration.jsonl  test_compilation_integration_diversity_analysis.json  test_enhanced_validation.jsonl  test_enhanced_validation_v7.jsonl  test_enhanced_validation_v8.jsonl  test_enhanced_validation_v8_diversity_analysis.json  test_enhanced_validation_v9.jsonl  test_enhanced_validation_v9_diversity_analysis.json  test_fixed_validation.jsonl  test_fixed_validation_diversity_analysis.json  test_generation_5.jsonl  test_generation_5_diversity_analysis.json  test_generation_diversity_analysis.json  test_generation_with_compilation.jsonl  test_generation_with_compilation_diversity_analysis.json  test_output.jsonl  test_output_diversity_analysis.json  test_output_with_validation_diversity_analysis.json
oot_custom/: copy.inc.c  slice_hd_texture
oot_native/: CMakeLists.txt  LIBULTRA_FUNCTIONS_IMPLEMENTED.md  README_GRAPHICS_TEST.md  build.sh  build_windows.sh
oot_native/build_windows/: CMakeCache.txt  Makefile  cmake_install.cmake
oot_native/build_windows/package_complete/: README_WINDOWS_COMPLETE.txt
oot_native/cmake/toolchains/: windows-x64.cmake
oot_native/docs/: AUDIO_CHECKLIST.md  AUDIO_IMPLEMENTATION_PLAN.md  GRAPHICS_IMPLEMENTATION_CHECKLIST.md
oot_native/include/audio/: audio_api.h  n64_audio.h
oot_native/include/graphics/: graphics_api.h  n64_graphics.h  opengl_backend.h  opengl_shaders.h  renderer_backend.h
oot_native/include/input/: input_api.h  input_backend.h  n64_input.h  sdl_input_backend.h
oot_native/include/libultra/: libultra_compat.h
oot_native/src/: glad.c  main_native.c  main_native_simple.c  test_audio.c  test_graphics.c  test_input.c  test_libultra.c  test_unified.c
oot_native/src/audio/: audio_api.c  n64_audio.c
oot_native/src/graphics/: graphics_api.c  n64_graphics.c  opengl_backend.c  opengl_resources.c  opengl_shaders.c  renderer_backend.c
oot_native/src/input/: input_api.c  sdl_input_backend.c
oot_native/src/libultra/: dma_functions.c  event_system.c  libultra_system.c  memory_mgmt.c  message_system.c  threading.c  timing.c
plans/: development-roadmap.md  improvement_plan.md
src/: __init__.py  main.py
support/: complete_context_generator.py  improved_scenario_generator.py  oot_context_cache.py  validate_and_enhance_scenarios.py
test_comprehensive_compilation/: example_2_snippet_0.c  snippet_0001.c  snippet_0002.c  snippet_0003.c  snippet_0004.c  snippet_0005.c
test_final_compilation/: example_1_snippet_0.c  snippet_0001.c  snippet_0002.c  snippet_0003.c  snippet_0005.c
test_final_compilation_v2/: snippet_0001.c  snippet_0002.c  snippet_0003.c  snippet_0004.c  snippet_0005.c
test_final_compilation_v3/: snippet_0001.c  snippet_0002.c  snippet_0003.c  snippet_0004.c  snippet_0005.c
test_final_compilation_v4/: example_3_snippet_0.c  snippet_0001.c  snippet_0002.c  snippet_0003.c  snippet_0004.c  snippet_0005.c
(+77 files in other folders)
